# ubs-comm

./: .bazelrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.en.md  README.md  README_EN.md  RELEASE-NOTES_EN.md  WORKSPACE  build.sh  hcom.spec
src/: BUILD.bazel  CMakeLists.txt
src/hcom/: CMakeLists.txt  hcom.cpp  hcom.h  hcom_def.h  hcom_err.h  hcom_log.cpp  hcom_log.h  hcom_num_def.h  hcom_obj_statistics.cpp  hcom_obj_statistics.h  hcom_ref.h  hcom_split.cpp  hcom_split.h  hcom_utils.cpp  hcom_utils.h
src/hcom/api/capi_v2/: hcom_c.cpp  hcom_c.h  hcom_def_inner_c.h  hcom_service_c.cpp  hcom_service_c.h
src/hcom/common/: code_msg.h  hcom_env.h  net_addr_size_map.h  net_bucket_linked_list.h  net_common.h  net_crc32.cpp  net_crc32.h  net_execution_service.cpp  net_execution_service.h  net_linked_list.h  net_mem_allocator.cpp  net_mem_allocator.h  net_mem_allocator_cache.cpp  net_mem_allocator_cache.h  net_mem_pool_fixed.cpp  net_mem_pool_fixed.h  net_monotonic.h  net_obj_pool.h  net_pgtable.cpp  net_pgtable.h  net_rb_tree.h  net_security_alg.cpp  net_security_alg.h  net_security_rand.h  net_trace.cpp  net_trace.h  net_util.cpp  net_util.h
src/hcom/common/trace/: htracer.cpp  htracer.h  htracer_info.h  htracer_manager.h  htracer_msg.h  htracer_service.cpp  htracer_service.h  htracer_service_helper.h  htracer_tdigest.h  htracer_utils.h  rpc_msg.h  rpc_server.cpp  rpc_server.h
src/hcom/multicast/: CMakeLists.txt  multicast_config_imp.cpp  multicast_config_imp.h  multicast_message.cpp  multicast_periodic_manager.cpp  multicast_periodic_manager.h  multicast_publisher.cpp  multicast_publisher_service.cpp  multicast_publisher_service_imp.cpp  multicast_publisher_service_imp.h  multicast_subscriber.cpp  multicast_subscriber_service.cpp  multicast_subscriber_service_imp.cpp  multicast_subscriber_service_imp.h
src/hcom/multicast/include/: multicast.h  multicast_config.h  multicast_def.h  multicast_message.h  multicast_publisher.h  multicast_publisher_service.h  multicast_service_callback.h  multicast_subscriber.h  multicast_subscriber_service.h  multicast_test.h
src/hcom/multicast/utils/: multicast_lock_guard.h  multicast_utils.cpp  multicast_utils.h
src/hcom/service_v2/: net_param_validator.h  service.cpp  service_callback.h  service_channel_imp.cpp  service_channel_imp.h  service_common.cpp  service_common.h  service_context.cpp  service_ctx_store.h  service_imp.cpp  service_imp.h  service_periodic_manager.cpp  service_periodic_manager.h
src/hcom/service_v2/api/: hcom_service.h  hcom_service_channel.h  hcom_service_context.h  hcom_service_def.h
src/hcom/transport/: net_ctx_info_pool.h  net_delay_release_timer.cpp  net_delay_release_timer.h  net_endpoint_impl.cpp  net_endpoint_impl.h  net_heartbeat.cpp  net_heartbeat.h  net_load_balance.h  net_memory_region.cpp  net_memory_region.h  net_oob.cpp  net_oob.h  net_oob_openssl.cpp  net_oob_openssl.h  net_oob_secure.cpp  net_oob_secure.h  net_oob_ssl.cpp  net_oob_ssl.h
src/hcom/transport/rdma/: rdma_common.h  rdma_mr_dm_buf.cpp  rdma_mr_dm_buf.h  rdma_mr_fixed_buf.cpp  rdma_mr_fixed_buf.h  rdma_mr_pool.cpp  rdma_mr_pool.h
src/hcom/transport/shm/: net_shm_async_endpoint.cpp  net_shm_async_endpoint.h  net_shm_common.h  net_shm_driver_oob.cpp  net_shm_driver_oob.h  net_shm_sync_endpoint.cpp  net_shm_sync_endpoint.h  shm_channel.cpp  shm_channel.h  shm_channel_keeper.cpp  shm_channel_keeper.h  shm_common.h  shm_composed_endpoint.cpp  shm_composed_endpoint.h  shm_data_channel.h  shm_handle.h  shm_handle_fds.h  shm_lock_guard.h  shm_mr_handle_map.h  shm_mr_pool.cpp  shm_mr_pool.h  shm_queue.h  shm_validation.h  shm_worker.cpp  shm_worker.h  shm_worker_io.cpp
src/hcom/transport/sock/: net_sock_async_endpoint.cpp  net_sock_async_endpoint.h  net_sock_common.h  (+12 more)
src/hcom/umq/: BUILD.bazel  CMakeLists.txt
src/ubsocket/: CMakeLists.txt  README.md  README_EN.md  cli_message.h  configure_settings.cpp  configure_settings.h  error.h  file_descriptor.cpp  file_descriptor.h  leaky_singleton.h  polling_epoll.cpp  polling_epoll.h  print_stats_mgr.h  probe_manager.h  rpc_adpt_vlog.cpp  rpc_adpt_vlog.h  socket_adapter.h  statistics.h  ub_lock_def.h  ub_lock_manager.h  ub_lock_ops.cpp  ub_lock_ops.h  ub_ring_buffer.h  ubsocket_io.cpp  ubsocket_io.h
src/ubsocket/backup/: CMakeLists.txt  README.md  buffer_util.h  cli_message.h  configure_settings.cpp  configure_settings.h  error.h  file_descriptor.cpp  file_descriptor.h  polling_epoll.cpp  polling_epoll.h  probe_manager.h  rpc_adpt_vlog.cpp  rpc_adpt_vlog.h  socket_adapter.h  statistics.cpp  statistics.h  ub_lock_def.h  ub_lock_ops.cpp
src/ubsocket/brpc/: CMakeLists.txt  brpc_configure_settings.h  brpc_context.cpp  brpc_context.h  brpc_file_descriptor.h  brpc_share_jfr.cpp  brpc_socket_adapter.cpp  brpc_socket_adapter.h  brpc_thread_pool.cpp  brpc_thread_pool.h  file_descriptor_async.cpp  file_descriptor_async.h  qbuf_queue.h  share_jfr_common.h
src/ubsocket/cli/: CMakeLists.txt  cli_args_parser.cpp  cli_client.cpp  cli_main.cpp  cli_terminal_display.cpp  cli_terminal_display.h
src/ubsocket/cmake/: config_last_commit.cmake  config_version.cmake
src/ubsocket/csrc/: CMakeLists.txt  ubsocket.cpp  ubsocket_cntl.cpp  ubsocket_epoll.cpp  ubsocket_logger.cpp  ubsocket_sock.cpp  ubsocket_struct_helper.h
src/ubsocket/include/: ubsocket.h  ubsocket_ctnl.h  ubsocket_def.h  ubsocket_epoll.h  ubsocket_sock.h
src/ubsocket/tools/: extract_timesstamps.py
src/ubsocket/trace/: utracer.cpp  utracer.h  utracer_def.h  utracer_info.h  utracer_manager.h  utracer_tdigest.h  utracer_utils.h
src/ubsocket/unit_test/: CMakeLists.txt  buffer_util_test.cpp  configure_settings_test.cpp  iobuf_zcopy_adapter_test.cpp  mock_infrastructure_test.cpp  probe_manager_test.cpp  scope_exit_test.cpp  statistics_test.cpp  ubsocket_signal_handler_test.cpp  umq_errno_converter_test.cpp  umq_ops_errno_test.cpp  umq_socket_connector_test.cpp  urpc_adpt_vlog_test.cpp  urpc_util_test.cpp  util_vlog_test.cpp  utracer_info_test.cpp  utracer_test.cpp  utracer_utils_test.cpp
(+638 files in other folders)
