load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_import", "cc_library")


cc_library(
    name = "boundscheck_lib",
    deps = ["@libboundscheck//:boundscheck",],
#    linkstatic = True,  # 关键参数：指示生成静态库
#    alwayslink = 1,     # 关键参数：强制包含所有符号
)

# 2. 然后，基于上面的库生成共享库
cc_binary(
    name = "libboundscheck.so",
    linkshared = True,  # 关键参数：指示生成共享库
    deps = [":boundscheck_lib"],  # 依赖上面的库
    visibility = ["//visibility:public"],
)

cc_import(
  name = "libboundscheck",
  shared_library = ":libboundscheck.so",
  visibility = ["//visibility:public"],
)

genrule(
    name = "generate_ubsocket_version_defs",
    srcs = ["ubsocket/UBSOCKET_VERSION"],
    outs = ["ubsocket_version_defs.h"],
    cmd = "V=$$(cat $<); M=$$(echo $$V | cut -d. -f1); m=$$(echo $$V | cut -d. -f2); p=$$(echo $$V | cut -d. -f3); cat > $@ << EOF\n#ifndef UBS_COMM_UBSOCKET_VERSION_DEFS_H\n#define UBS_COMM_UBSOCKET_VERSION_DEFS_H\n#define UBS_VERSION_MAJOR $$M\n#define UBS_VERSION_MINOR $$m\n#define UBS_VERSION_PATCH $$p\n#define UBS_VERSION_STR \"$$V\"\n#define UBS_VERSION_FULL_STR \"$$V\"\n#endif\nEOF\n",
)

cc_library(
    name = "ubsocket_version_defs",
    hdrs = [":generate_ubsocket_version_defs"],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_import(
  name = "libumq",
  shared_library = ":libumq.so",
)



cc_binary(
    name = "libumq.so",
    linkshared = True,
    deps = [
        "//src/hcom/umq/src:umq_lib",
    ],
    dynamic_deps = ["//src/hcom/umq/src/qbuf:umq_buf"],
    visibility = ["//visibility:public"],
)


cc_binary(
    name = "libubsocket.so",
    srcs = glob([
        "ubsocket/*.cpp",
        "ubsocket/*.c",
        "ubsocket/brpc/*.cpp",
    ]) + glob([  # 头文件现在也放在 srcs 里
        "ubsocket/*.h",
        "ubsocket/brpc/*.h",
    ]),
    copts = [
        "-D_GNU_SOURCE",
        "-std=c++14",
        "-fPIC",
    ],
    includes = [".", "ubsocket", "ubsocket/brpc"],
    deps = [
        ":boundscheck_lib",  # 依赖 boundscheck 库
#        ":libumq_buf",
        "//src/hcom/umq/src:umq_aggregate",
        ":libumq",
#        ":libumq_ub",
    ],
    linkshared = True, 
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ubsocket",
    srcs = glob([
        "ubsocket/csrc/**/*.cpp",
        "ubsocket/csrc/**/*.h"
    ]),

    # 对外公开的.h文件
    hdrs = glob(["ubsocket/include/*.h"]),
    copts = [
        "-D_GNU_SOURCE",
        # 指定和umq一起编译
        "-DUMQ_ADAPTER_BACKEND_ENABLED",
        "-std=c++14",
        "-fPIC",
    ],
    includes = [
        "ubsocket/include",
        "ubsocket",
        "ubsocket/csrc",
        "ubsocket/csrc/common",
        "ubsocket/csrc/core",
        "ubsocket/csrc/core/umq",
        "ubsocket/csrc/iobuf",
        "ubsocket/csrc/profiling",
        "ubsocket/csrc/under_api",

        # 需要使用hcom中的umq头文件
        "hcom/"
    ],
    deps = [
        ":boundscheck_lib",
        ":ubsocket_version_defs",
        "//src/hcom/umq:umq",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "golden",
    srcs = glob([
        "ubsocket/tools/golden/*.cpp",
        "ubsocket/tools/golden/*.h"
    ]),
    includes = [
        "ubsocket/include",
        "ubsocket/tools/golden",
        "ubsocket/csrc"
    ],
    copts = [
        "-D_GNU_SOURCE",
        "-std=c++14",
        "-fPIC",
        "-Wno-unused-function"
    ],
    deps = [
        "//src:ubsocket"
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "ubstat",
    srcs = glob([
        "ubsocket/csrc/cli/*.cpp",
    ]) + glob([  # 头文件现在也放在 srcs 里
        "ubsocket/csrc/cli/*.h",
    ]),
    copts = [
        "-D_GNU_SOURCE",
        "-std=c++14",
        "-fPIC"
    ],
    includes = [".", "ubsocket", "ubsocket/csrc/cli"],
    deps = [
        ":boundscheck_lib",  # 依赖 boundscheck 库
        "//src/hcom/umq:umq",
        ":ubsocket"
    ],
    visibility = ["//visibility:public"],
)

load("//src/hcom/umq/bazel:copts.bzl", "UMQ_DEFAULT_STATIC_COPTS")

cc_library(
    name = "ubsocketall",
    srcs = glob([
        "src/hcom/umq/src/dfx/*.c",
        "src/hcom/umq/src/qbuf/*.c",
        "src/hcom/umq/src/umq_ub/**/*.c",
        "src/hcom/umq/src/*.c",
        "src/hcom/umq/util/*.c",
        "src/hcom/umq/util/*.cpp",
        "ubsocket/*.cpp",
        "ubsocket/*.c",
        "ubsocket/brpc/*.cpp",
    ]),
    hdrs = glob([
        "src/hcom/umq/src/dfx/*.h",
        "src/hcom/umq/src/qbuf/*.h",
        "src/hcom/umq/src/umq_ub/**/*.h",
        "src/hcom/umq/src/*.h",
        "src/hcom/umq/util/*.h",
        "ubsocket/*.h",
        "ubsocket/brpc/*.h",
    ]),
    includes = [
    ".", "ubsocket", "ubsocket/brpc",
        "src/hcom/umq/src/dfx",
        "src/hcom/umq/src/qbuf",
        "src/hcom/umq/src/umq_ub",
        "src/hcom/umq/src/umq_ub/core",
        "src/hcom/umq/src/umq_ub/core/flow_control",
        "src/hcom/umq/src/umq_ub/core/private",
        "src/hcom/umq/src/umq_ub/core/private",
        "src/hcom/umq/src",
        "src/hcom/umq/util",
    ],
    copts = UMQ_DEFAULT_STATIC_COPTS + [
        "-DUMQ_STATIC_LIB",
    ],
    linkopts = ["-lpthread"],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/include:umq_tp_headers",
        "//src/hcom/umq/include:umq_ub_headers",
        "//src/hcom/umq/include/umq:umq_headers",
        "@boringssl//:ssl",
        "@boringssl//:crypto",
        "@urma//:urma_headers",
        "@urma//:urma_lib",
        "@urma//:tpsa_lib",
        "//src/hcom/umq/include:framework_headers",
        ":boundscheck_lib",
    ],
    features = [
        "static_library",
        "-pic",
        "-supports_pic",
    ],
    linkstatic = True,
)

# 4. 聚合目标保持不变
filegroup(
    name = "release_package",
    srcs = [
        ":libubsocket.so",
        ":libboundscheck",
        "//src/hcom/umq/src:umq",
        "//src/hcom/umq/src/qbuf:umq_buf",
        "//src/hcom/umq/src/umq_ub:umq_ub",

    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "hcom",
    deps = ["//src/hcom:hcom_static"],
    visibility = ["//visibility:public"],
)

cc_import(
    name = "libhcom",
    shared_library = "//src/hcom:libhcom.so",
)

filegroup(
    name = "hcom_release_package",
    srcs = [
        "//src/hcom:hcom_static",
        "//src/hcom:libhcom.so",
    ],
    visibility = ["//visibility:public"],
)
