
file(GLOB MULTICAST_INCLUDE_FILES "include/*.h")

set(MULTICAST_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include/hcom/multicast)
set(MULTICAST_INSTALL_LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib)

install(FILES ${MULTICAST_INCLUDE_FILES} DESTINATION ${MULTICAST_INSTALL_INCLUDE_DIR} PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ)