# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.

load("//src/hcom/umq/bazel:build_settings.bzl", "openssl_mode")
load("//src/hcom/umq/bazel:copts.bzl", "UMQ_DEFAULT_COPTS", "UMQ_DEFAULT_LINKOPTS")

openssl_mode(
    name = "openssl_mode",
    build_setting_default = "bazel",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "openssl_system",
    flag_values = {
        ":openssl_mode": "system",
    },
    visibility = ["//visibility:public"],
)

config_setting(
    name = "openssl_bazel",
    flag_values = {
        ":openssl_mode": "bazel",
    },
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vlog",
    srcs = ["umq_vlog.c"],
    hdrs = ["umq_vlog.h"],
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/util:common_util",
        "//src/hcom/umq/include/umq:umq_headers",
    ]
)

cc_library(
    name = "umq_inner",
    hdrs = ["umq_inner.h"],
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/include:umq_tp_headers",
        "//src/hcom/umq/util:common_util",
    ]
)

cc_library(
    name = "msg_ring",
    srcs = ["msg_ring.c"],
    hdrs = ["msg_ring.h"],
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    visibility = ["//visibility:public"],
    deps = [
        ":vlog",
    ]
)

cc_library(
    name = "util_id_generator",
    srcs = ["util_id_generator.c"],
    hdrs = ["util_id_generator.h"],
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "umq_lib",
    srcs = [
        "umq_api.c",
        "umq_pro_api.c",
    ],
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    linkopts = UMQ_DEFAULT_LINKOPTS + [
        "-lpthread",
    ],
    deps = [
        "//src/hcom/umq/include:umq_headers",
        "//src/hcom/umq/include:umq_tp_headers",
        "//src/hcom/umq/src/dfx:dfx",
        "//src/hcom/umq/src/qbuf:umq_buf_lib",
        "//src/hcom/umq/src:vlog",
        "//src/hcom/umq/src:umq_inner",
        "//src/hcom/umq/util:common_util",
    ],
    visibility = ["//visibility:public"],
)

cc_shared_library(
    name = "umq",
    deps = [
        ":umq_lib",
    ],
    dynamic_deps = ["//src/hcom/umq/src/qbuf:umq_buf"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "libumq_so",
    srcs = [
        "//src/hcom/umq:umq",
        "//src/hcom/umq/qbuf:umq_buf",
        "//src/hcom/umq/umq_ipc:umq_ipc",
        "//src/hcom/umq/umq_ub:umq_ub",
    ]
)

# 聚合 UMQ 的各个库，方便其他目标依赖
cc_library(
    name = "umq_aggregate",
    hdrs = glob([
        "src/hcom/include/umq/*.h",
    ]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
		 ":umq_lib",
#		":libumq_so",
    ],
)