# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.

load("//src/hcom/umq/bazel:copts.bzl", "UMQ_DEFAULT_COPTS", "UMQ_DEFAULT_LINKOPTS")

cc_library(
    name = "common_util",
    srcs = glob([
        "**/*.c",
        "**/*.cpp",
    ]),
    hdrs = glob(["**/*.h"]),
    includes = ["."],
    copts = UMQ_DEFAULT_COPTS,
    linkopts = UMQ_DEFAULT_LINKOPTS + [
        "-lpthread",
    ] + select({
        "//src/hcom/umq/src:openssl_system": [
            "-lcrypto",
            "-lssl",
        ],
        "//conditions:default" : [],
    }),
    visibility = ["//src/hcom/umq/src:__subpackages__"],
    deps = ["//src/hcom/umq/include:framework_headers"] + select({
        "//src/hcom/umq/src:openssl_system": [],
        "//conditions:default": [
            "@openssl//:ssl",
            "@openssl//:crypto",
        ],
    }),
    alwayslink = True,
)